--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background: linear-gradient(180deg, #8cb0b0 0%, #d8d8b2);
+  color: #432332;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background: #eed47f;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px #432332;
+  color: #432332;
+  font-size: 0.6em;
+  font-weight: bold;
+  width: 350px;
+  padding: 0.8rem 1.5rem;
+  cursor: pointer;
+  transition: 0.4s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+button:hover {
+  background: #432332;
+  box-shadow: 2px 2px 5px #eed47f;
+  color: #eed47f;
 }
